fix
통계 그래프 출력되게 고침